--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/router": "^17.1.0",
+    "@ngneat/transloco": "^6.0.4",
     "angular-cli-ghpages": "^2.0.0-beta.2",
     "rxjs": "~7.8.0",
     "swiper": "^11.0.5",
